[FEAT, DOCS] view 로직 리펙토링, API 문서 업데이트, model field 수정 - BaseEntity의 created_by, modified_by 필드 default값 설정
